Added in Fortify library